--- a/force-app/main/default/aura/campingHeader/campingHeader.cmp
+++ b/force-app/main/default/aura/campingHeader/campingHeader.cmp
@@ -1,22 +1,13 @@
-<aura:component>
-    <!-- PAGE HEADER -->
-    <lightning:layout class="slds-page-header slds-page-header_object-home">
+<aura:component >
+      <lightning:layout class="slds-page-header slds-page-header--object-home">
         <lightning:layoutItem>
-            <lightning:icon iconName="standard:scan_card" alternativeText="My Expenses"/>
+            <lightning:icon iconName="action:goal" alternativeText="Camping List"/>
         </lightning:layoutItem>
         <lightning:layoutItem padding="horizontal-small">
-            <div class="page-section page-header">
-                <h1 class="slds-text-heading_label">Camping</h1>
-                <h2 class="slds-text-heading_medium">My Items</h2>
+             <div class="page-section page-header">
+                <h1 class="slds-text-heading--label">Camping</h1>
+                <h2 class="slds-text-heading--medium">Camping List</h2>
             </div>
         </lightning:layoutItem>
     </lightning:layout>
-    <!-- / PAGE HEADER -->
-    <!-- NEW EXPENSE FORM -->
-    <lightning:layout>
-        <lightning:layoutItem padding="around-small" size="6">
-        <!-- [[ expense form goes here ]] -->
-        </lightning:layoutItem>
-    </lightning:layout>
-    <!-- / NEW EXPENSE FORM -->
 </aura:component>
