--- a/force-app/main/default/aura/camping/camping.cmp
+++ b/force-app/main/default/aura/camping/camping.cmp
@@ -1,5 +1,5 @@
 <aura:component>
     <c:campingHeader/>
-    <c:campingListItem/>
+    <!--<c:campingListItem/>-->
     <c:campingList/>
 </aura:component>
